# adaptable_caching_layer

./: .gitignore  CMakeLists.txt  README.md  build.sh  workfile.fio
benchmarks/custom/: random_read.sh  random_write.sh  sequential_read.sh  sequential_write.sh
benchmarks/fio/multi_threaded/: random_read.fio  random_write.fio  sequential_read.fio  sequential_write.fio
benchmarks/fio/single_threaded/: random_read.fio  random_write.fio  sequential_read.fio  sequential_write.fio
examples/: bytes_read.c  bytes_write.c  prefetch_rand_read.c  prefetch_rand_write.c  prefetch_seq_read.c  prefetch_seq_write.c
source/: acl.c  acl.h  cache.c  calls.c  intercept.c  intercept.h  mapping.c  prefetch.c  prefetch.h
source/benchmark/: custom_benchmark.c
source/cache/: fifo.c  fifo.h  lfu.c  variant.h
source/prefetch/: abfp.c  abfp.h  fsdp.c  fsdp.h  mcfp.c  mcfp.h  variant.h
source/structures/: extent.c  heap.c  heap.h  lookup.c  lookup.h  markov.c  markov.h  priority.c  queue.c  queue.h
source/structures/internal/: heap.h  lookup.c  markov.c  priority.c  queue.c  queue.h
source/utils/: file.c  file.h  path.c  path.h  string.c  string.h
